test_suite/alan-2022-examples/failing/005280_mutation.alan
source aT begin leave S rem else m8 end
